navbar alteração de cor upplay

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,7 +410,7 @@ Navigation
 }
 
 .navbar-header .navbar.sticky{
-  background-color: #ffffff;
+  background-color: #0f9e9e;
   box-shadow: 0 8px 28px 2px rgba(61, 61, 61, .12);   
 }
 .navbar-header .navbar-nav li a {
